--- a/Bachelorarbeit/parameteruntersuchung.tex
+++ b/Bachelorarbeit/parameteruntersuchung.tex
@@ -4,9 +4,21 @@
 \section{Einleitung und Vorgehensweise}
 \label{sec:einleitung_und_vorgehensweise}
 
-\section{Stand der Technik}
-\label{sec:stand_der_technik}
+\section{Steiggeschwindigkeit}
+\label{sec:steiggeschwindigkeit}
 
+\begin{itemize}
+	\item Abhängigkeit des Widerstandes von \ensuremath{V_{Kg}} muss gegeben sein
+	\item Krit. für Auswahl optimaler Steiggeschwindigkeit notwendig, alleine min. Batteriekapazitätentnahme nicht mgl., da sonst zu geringe Steiggeschwindigkeiten herauskommen
+	\item Struktogramm folgt
+\end{itemize}
 
-\section{Ziel der Arbeit}
-\label{sec:ziel_der_atrbeit}
+\section{Verstellpropeller}
+\label{sec:verstellprop}
+
+\begin{itemize}
+	\item Auswahl nach 
+	\begin{equation}
+		\eta_{Prop} = \frac{T\cdot\tilde{V}}{P} = \frac{T\cdot (\mu_z + v_i)}{M\cdot \omega}
+	\end{equation}
+\end{itemize}
