--- a/Bachelorarbeit/parameteruntersuchung.tex
+++ b/Bachelorarbeit/parameteruntersuchung.tex
@@ -17,6 +17,10 @@
 \label{sec:verstellprop}
 
 \begin{itemize}
+	\item Aus der Datenbank von APC werden alle Propeller mit dem vorgegebenen Durchmesser und verschiedenen Pitches entnommen
+	\item Vernachlässigt werden dabei gesonderte Propeller mit z.B. besonderem Pitch, Verwindung, E am Ende oder mit mehr als 2 Blättern (3 oder 4)
+	\item \textcolor{red}{hier interessant, ob Funktion für Regression des Wirkungsgrades über dem Schubbeiwert???}
+	\item interessant ist hier Regression --> Frage nur über was, Wirkungsgrad in Abhängigkeit von \ensuremath{C_T} oder \ensuremath{\lambda}
 	\item Auswahl nach 
 	\begin{equation}
 		\eta_{Prop} = \frac{T\cdot\tilde{V}}{P} = \frac{T\cdot (\mu_z + v_i)}{M\cdot \omega}
